--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: responsive_wrap_container
 description: A Responsive Container that behaves normally in small screens, but wraps your content in a box for big screens. (for Adaptive Web & Mobile designs)
 version: 0.0.1
-repository:
+repository: https://github.com/ziadhassan7/responsive_wrap_container
 
 environment:
   sdk: '>=3.1.5 <4.0.0'
